--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 	"dependencies": {
 		"motion": "^10.16.4",
 		"openai": "^4.0.0",
-		"svelte-french-toast": "^1.2.0"
+		"svelte-french-toast": "^1.2.0",
+		"svelte-typewriter": "^3.1.6"
 	}
 }
