--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^4.0.5",
 		"svelte-check": "^3.4.3",
+		"sveltekit-rate-limiter": "^0.5.1",
 		"sveltekit-superforms": "^1.7.4",
 		"tailwindcss": "^3.3.3",
 		"tslib": "^2.4.1",
