--- a/.prettierrc
+++ b/.prettierrc
@@ -4,7 +4,7 @@
     "trailingComma": "none",
     "printWidth": 300,
     "tabWidth": 4,
-    "plugins": ["prettier-plugin-svelte"],
+    "plugins": ["prettier-plugin-svelte", "prettier-plugin-tailwindcss"],
     "pluginSearchDirs": ["."],
     "overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
 }
