--- a/package.json
+++ b/package.json
@@ -1,41 +1,42 @@
 {
-	"name": "color-cauldron-web",
-	"version": "1.0.0",
-	"private": true,
-	"scripts": {
-		"dev": "vite dev",
-		"build": "vite build",
-		"preview": "vite preview",
-		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --plugin-search-dir . --check .",
-		"format": "prettier --plugin-search-dir . --write ."
-	},
-	"devDependencies": {
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-vercel": "^3.0.3",
-		"@sveltejs/kit": "^1.20.4",
-		"autoprefixer": "^10.4.16",
-		"postcss": "^8.4.31",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.10.1",
-		"svelte": "^4.0.5",
-		"svelte-check": "^3.4.3",
-		"sveltekit-rate-limiter": "^0.5.1",
-		"sveltekit-superforms": "^1.7.4",
-		"tailwindcss": "^3.3.3",
-		"tslib": "^2.4.1",
-		"typescript": "^5.0.0",
-		"vite": "^4.4.2",
-		"zod": "^3.22.2"
-	},
-	"type": "module",
-	"dependencies": {
-		"motion": "^10.16.4",
-		"openai": "^4.0.0",
-		"svelte-french-toast": "^1.2.0",
-		"svelte-persisted-store": "^0.11.0",
-		"svelte-typewriter": "^3.1.6",
-		"tippy.js": "^6.3.7"
-	}
+    "name": "color-cauldron-web",
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "dev": "vite dev",
+        "build": "vite build",
+        "preview": "vite preview",
+        "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+        "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+        "lint": "prettier --plugin-search-dir . --check .",
+        "format": "prettier --plugin-search-dir . --write ."
+    },
+    "devDependencies": {
+        "@sveltejs/adapter-auto": "^2.0.0",
+        "@sveltejs/adapter-vercel": "^3.0.3",
+        "@sveltejs/kit": "^1.20.4",
+        "autoprefixer": "^10.4.16",
+        "postcss": "^8.4.31",
+        "prettier": "^3.3.2",
+        "prettier-plugin-svelte": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.6.5",
+        "svelte": "^4.0.5",
+        "svelte-check": "^3.4.3",
+        "sveltekit-rate-limiter": "^0.5.1",
+        "sveltekit-superforms": "^1.7.4",
+        "tailwindcss": "^3.4.4",
+        "tslib": "^2.4.1",
+        "typescript": "^5.0.0",
+        "vite": "^4.4.2",
+        "zod": "^3.22.2"
+    },
+    "type": "module",
+    "dependencies": {
+        "motion": "^10.16.4",
+        "openai": "^4.0.0",
+        "svelte-french-toast": "^1.2.0",
+        "svelte-persisted-store": "^0.11.0",
+        "svelte-typewriter": "^3.1.6",
+        "tippy.js": "^6.3.7"
+    }
 }
