--- a/package.json
+++ b/package.json
@@ -12,28 +12,27 @@
         "format": "prettier --plugin-search-dir . --write ."
     },
     "devDependencies": {
-        "@sveltejs/adapter-auto": "^2.0.0",
-        "@sveltejs/adapter-vercel": "^3.0.3",
-        "@sveltejs/kit": "^1.20.4",
+        "@sveltejs/adapter-vercel": "^5.3.2",
+        "@sveltejs/kit": "^2.5.17",
         "autoprefixer": "^10.4.16",
         "postcss": "^8.4.31",
         "prettier": "^3.3.2",
         "prettier-plugin-svelte": "^3.2.5",
         "prettier-plugin-tailwindcss": "^0.6.5",
-        "svelte": "^4.0.5",
-        "svelte-check": "^3.4.3",
+        "svelte": "^4.2.18",
+        "svelte-check": "^3.8.1",
         "sveltekit-rate-limiter": "^0.5.1",
-        "sveltekit-superforms": "^1.7.4",
         "tailwindcss": "^3.4.4",
         "tslib": "^2.4.1",
         "typescript": "^5.5.2",
-        "vite": "^4.4.2",
-        "zod": "^3.22.2"
+        "vite": "^5.3.1"
     },
     "type": "module",
     "dependencies": {
+        "@sveltejs/vite-plugin-svelte": "^3.1.1",
         "motion": "^10.16.4",
         "openai": "^4.0.0",
+        "svelte-component-to-image": "^0.1.0",
         "svelte-french-toast": "^1.2.0",
         "svelte-persisted-store": "^0.11.0",
         "svelte-typewriter": "^3.1.6",
