--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
     "devDependencies": {
         "@sveltejs/adapter-vercel": "^5.3.2",
         "@sveltejs/kit": "^2.5.17",
-        "autoprefixer": "^10.4.16",
+        "@tailwindcss/postcss": "^4.0.0-beta.3",
         "postcss": "^8.4.31",
         "prettier": "^3.3.2",
         "prettier-plugin-svelte": "^3.2.5",
-        "prettier-plugin-tailwindcss": "^0.6.5",
+        "prettier-plugin-tailwindcss": "^0.6.9",
         "svelte": "^4.2.18",
         "svelte-check": "^3.8.1",
         "sveltekit-rate-limiter": "^0.5.1",
-        "tailwindcss": "^3.4.4",
+        "tailwindcss": "^4.0.0-beta.3",
         "tslib": "^2.4.1",
         "typescript": "^5.5.2",
         "vite": "^5.3.1"
