--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "devDependencies": {
         "@sveltejs/adapter-vercel": "^5.3.2",
         "@sveltejs/kit": "^2.5.17",
-        "@tailwindcss/postcss": "^4.0.0-beta.3",
         "postcss": "^8.4.31",
         "prettier": "^3.3.2",
         "prettier-plugin-svelte": "^3.2.5",
@@ -22,7 +21,7 @@
         "svelte": "^4.2.18",
         "svelte-check": "^3.8.1",
         "sveltekit-rate-limiter": "^0.5.1",
-        "tailwindcss": "^4.0.0-beta.3",
+        "tailwindcss": "^4.0.0-beta.4",
         "tslib": "^2.4.1",
         "typescript": "^5.5.2",
         "vite": "^5.3.1"
@@ -30,6 +29,7 @@
     "type": "module",
     "dependencies": {
         "@sveltejs/vite-plugin-svelte": "^3.1.1",
+        "@tailwindcss/vite": "^4.0.0-beta.4",
         "motion": "^10.16.4",
         "openai": "^4.0.0",
         "svelte-component-to-image": "^0.1.0",
