--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "type": "module",
     "dependencies": {
+        "@formkit/auto-animate": "^0.8.2",
         "@sveltejs/vite-plugin-svelte": "^3.1.1",
         "@tailwindcss/vite": "^4.0.0-beta.4",
         "motion": "^11.13.1",
