--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "svelte": "^4.2.18",
         "svelte-check": "^3.8.1",
         "sveltekit-rate-limiter": "^0.5.1",
-        "tailwindcss": "^4.0.0-beta.4",
+        "tailwindcss": "^4.1.12",
         "tslib": "^2.4.1",
         "typescript": "^5.5.2",
         "vite": "^5.3.1"
@@ -30,7 +30,7 @@
     "dependencies": {
         "@formkit/auto-animate": "^0.8.2",
         "@sveltejs/vite-plugin-svelte": "^3.1.1",
-        "@tailwindcss/vite": "^4.0.0-beta.4",
+        "@tailwindcss/vite": "^4.1.12",
         "motion": "^11.13.1",
         "openai": "^4.0.0",
         "svelte-component-to-image": "^0.1.0",
